# google-hashcode-2020

solution/: .gitignore  pyproject.toml
solution/solution/: b_solution.py  c_solution.py  d_solution.py  e_solution.py  models.py  output.txt  parser.py  solution.py
